# edge-skill-optimizer

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/edge_skill_optimizer/: __init__.py  cli.py  distiller.py
tests/: test_distiller.py
