[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-skill-optimizer"
version = "0.1.0"
description = "Shrink complex agent skills to run natively on mobile devices"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "ai",
    "edge",
    "optimization",
    "quantization",
    "mobile",
    "onnx",
    "coreml",
    "distillation",
    "model-compression"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Embedded Systems",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "onnx>=1.14",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/edge-skill-optimizer"
Documentation = "https://github.com/avasis-ai/edge-skill-optimizer#readme"
Repository = "https://github.com/avasis-ai/edge-skill-optimizer.git"
Issues = "https://github.com/avasis-ai/edge-skill-optimizer/issues"

[project.scripts]
edge-optimizer = "edge_skill_optimizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_skill_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
